--- a/SimpleControlField/MainWindow.xaml
+++ b/SimpleControlField/MainWindow.xaml
@@ -17,7 +17,7 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
-                <Button Grid.Column="0" Margin="5">Add</Button>
+                <Button Grid.Column="0" Margin="5" Click="AddButtonOnClick">Add</Button>
                 <Button Grid.Column="1" Margin="5">Delete</Button>
                 <Button Grid.Column="2" Margin="5" Click="ResetButtonClick" >Reset</Button>
             </Grid>
@@ -65,19 +65,19 @@
                 </Grid.ColumnDefinitions>
 
                 <StackPanel Grid.Column="0">
-                    <CheckBox>Weld</CheckBox>
-                    <CheckBox>Assembly</CheckBox>
-                    <CheckBox>Plasma</CheckBox>
-                    <CheckBox>Laser</CheckBox>
-                    <CheckBox>Purchase</CheckBox>
+                    <CheckBox Name="CkWeld">Weld</CheckBox>
+                    <CheckBox Name="CkAssembly">Assembly</CheckBox>
+                    <CheckBox Name="CkPlasma" >Plasma</CheckBox>
+                    <CheckBox Name="CkLaser" >Laser</CheckBox>
+                    <CheckBox Name="CkPurchase" >Purchase</CheckBox>
                 </StackPanel>
 
                 <StackPanel Grid.Column="1">
-                    <CheckBox>Lathe</CheckBox>
-                    <CheckBox>Drill</CheckBox>
-                    <CheckBox>Fold</CheckBox>
-                    <CheckBox>Roll</CheckBox>
-                    <CheckBox>Saw</CheckBox>
+                    <CheckBox Name="CkLathe">Lathe</CheckBox>
+                    <CheckBox Name="CkDrill">Drill</CheckBox>
+                    <CheckBox Name="CkFold">Fold</CheckBox>
+                    <CheckBox Name="CkRoll">Roll</CheckBox>
+                    <CheckBox Name="CkSaw">Saw</CheckBox>
                 </StackPanel>
             </Grid>
 
